--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -75,6 +75,8 @@
     "react/prop-types": 0,
     "no-useless-escape": 0,
     "object-curly-newline": 0,
+    "no-trailing-spaces": 0,
+    "no-prototype-builtins": 0,
     "jsx-a11y/anchor-is-valid": [
       "error",
       {
