--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -77,6 +77,7 @@
     "object-curly-newline": 0,
     "no-trailing-spaces": 0,
     "no-prototype-builtins": 0,
+    "func-names": 0,
     "jsx-a11y/anchor-is-valid": [
       "error",
       {
