--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "babel-polyfill": "^6.23.0",
-    "babel-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.26.0",
     "lodash": "^4.17.4",
-    "react": "^16.2.0",
+    "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.3.2",
     "react-helmet": "^5.2.0",
-    "react-redux": "^5.0.3",
-    "react-router-dom": "^4.0.0-beta.6",
-    "redux": "^3.6.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "redux": "^4.0.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.23.1",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.2",
-    "babel-loader": "^6.3.2",
+    "babel-loader": "^7.1.1",
     "babel-plugin-dynamic-import-webpack": "^1.0.1",
     "babel-plugin-import": "^1.6.2",
     "babel-plugin-lodash": "^3.2.11",
@@ -44,6 +44,7 @@
     "babel-preset-stage-3": "^6.22.0",
     "babili-webpack-plugin": "0.0.10",
     "clean-webpack-plugin": "^0.1.15",
+    "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.2",
     "eslint": "^4.18.2",
@@ -51,17 +52,21 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "file-loader": "^0.10.1",
-    "html-webpack-plugin": "^2.28.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "less": "2.7.2",
     "less-loader": "^4.0.5",
     "lodash-webpack-plugin": "^0.11.2",
     "mkdirp": "^0.5.1",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
     "style-loader": "^0.13.2",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^0.5.9",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1",
-    "webpack-merge": "^3.0.0"
+    "webpack": "^3.6.0",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "^2.9.1",
+    "webpack-merge": "^4.1.0"
   },
   "engines": {}
 }
